--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
       0%, 100% { transform: scale(1); opacity: 0.5; }
       50% { transform: scale(1.5); opacity: 1; }
     }
-    /* High-DPI adjustments */
     @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
       .circle, .task-icon {
         transform: scale(1.5);
@@ -46,6 +45,11 @@
       .circle:hover, .task-item:hover .task-icon {
         transform: scale(1.65);
       }
+    }
+    /* Ensure loader is hidden */
+    .loader-hidden {
+      display: none !important;
+      animation: none !important;
     }
   </style>
 </head>
@@ -74,9 +78,14 @@
     <div id="result-screen" class="hidden">
       <div class="quiz-result text-[1.5rem] sm:text-[2rem] font-bold text-center mb-[2vh]" id="score"></div>
       <div class="task-list space-y-[1vh]" id="tasks"></div>
-      <button class="retake-btn mt-[2vh] w-full py-[1vh] bg-blue-500 text-white rounded-lg hover:bg-blue-600 transition-colors text-[1rem] sm:text-[1.1rem]">Retake Quiz</button>
+      <button class="retake-btn mt-[2vh] w-full py-[1vh] bg-blue-500 text-white rounded-lg hover:bg-blue-600 transition-colors text-[1rem] sm:text-[1.1rem]" onclick="resetQuiz()">Retake Quiz</button>
     </div>
   </div>
+
+  <audio id="meditationMusic" src="meditation_music.mp3" loop></audio>
+  <audio id="startSound" src="start_sound.mp3"></audio>
+  <audio id="endSound" src="end_sound.mp3"></audio>
+  <audio id="rewardSound" src="reward_sound.mp3"></audio>
 
   <script>
     const questions = [
@@ -88,28 +97,33 @@
     ];
     const tasksBySeverity = {
       mild: [
-        "Try a 5-minute mindfulness breathing exercise after each task.",
-        "Use a Pomodoro timer: 25 minutes focus, 5 minutes break.",
-        "Keep a notepad for quick jotting of to-dos."
+        { text: "Try a 5-minute mindfulness breathing exercise after each task.", action: 'meditation' },
+        { text: "Use a Pomodoro timer: 25 minutes focus, 5 minutes break.", action: 'pomodoro' },
+        { text: "Keep a notepad for quick jotting of to-dos.", action: 'notepad' }
       ],
       moderate: [
-        "Designate a distraction-free workspace with minimal stimuli.",
-        "Create a daily checklist each morning and tick off items.",
-        "Use a focus-blocking app for 45-minute sessions."
+        { text: "Designate a distraction-free workspace with minimal stimuli.", action: 'workspace' },
+        { text: "Create a daily checklist each morning and tick off items.", action: 'checklist' },
+        { text: "Use a focus-blocking app for 45-minute sessions.", action: 'focusBlock' }
       ],
       severe: [
-        "Break tasks into 5-minute micro-tasks and reward yourself after each.",
-        "Schedule structured cycles: 15 minutes work / 5 minutes move/stretch.",
-        "Pair with an accountability buddy and check in hourly."
+        { text: "Break tasks into 5-minute micro-tasks and reward yourself after each.", action: 'microTask' },
+        { text: "Schedule structured cycles: 15 minutes work / 5 minutes move/stretch.", action: 'workStretch' },
+        { text: "Pair with an accountability buddy and check in hourly.", action: 'accountability' }
       ]
     };
 
     let current = 0, total = 0;
     const maxScore = questions.length * 4;
+    let timerInterval = null;
+    let pomodoroPhase = 'focus';
+    let pomodoroCycles = 0;
 
     window.onload = () => {
+      // Ensure loader is hidden initially in case of duplicate rendering
+      document.getElementById('loader').classList.add('loader-hidden');
       setTimeout(() => {
-        document.getElementById('loader').classList.add('hidden');
+        document.getElementById('loader').classList.add('loader-hidden');
         document.getElementById('quiz').classList.remove('hidden');
         document.getElementById('quiz').classList.add('fade-in');
         loadQuestion();
@@ -122,6 +136,8 @@
         console.error('Question not found for index:', current);
         return;
       }
+      // Force hide loader again to prevent stuck animations
+      document.getElementById('loader').classList.add('loader-hidden');
       const questionEl = document.getElementById('question');
       questionEl.innerHTML = `<p class="slide-in">${q.q}</p>`;
       const opts = document.getElementById('options');
@@ -152,8 +168,30 @@
       }
     }
 
+    function formatTime(seconds) {
+      const mins = Math.floor(seconds / 60);
+      const secs = seconds % 60;
+      return `${mins}:${secs < 10 ? '0' : ''}${secs}`;
+    }
+
+    function startTimer(duration, display, onEnd, onTick = () => {}) {
+      let timeLeft = duration;
+      display.textContent = formatTime(timeLeft);
+      clearInterval(timerInterval);
+      timerInterval = setInterval(() => {
+        timeLeft--;
+        display.textContent = formatTime(timeLeft);
+        onTick();
+        if (timeLeft <= 0) {
+          clearInterval(timerInterval);
+          onEnd();
+        }
+      }, 1000);
+    }
+
     function showResult() {
       document.getElementById('quiz').classList.add('hidden');
+      document.getElementById('loader').classList.add('loader-hidden');
       const percent = Math.round((total / maxScore) * 100);
       const scoreEl = document.getElementById('score');
       scoreEl.textContent = `Focus Score: ${percent}%`;
@@ -162,16 +200,70 @@
       let severity = percent < 40 ? 'mild' : percent <= 70 ? 'moderate' : 'severe';
       const tasksEl = document.getElementById('tasks');
       tasksEl.innerHTML = '';
-      tasksBySeverity[severity].forEach((txt, i) => {
+      tasksBySeverity[severity].forEach((task, i) => {
         const div = document.createElement('div');
         div.className = 'task-item flex items-center space-x-[1vw] slide-in';
         div.style.animationDelay = `${i * 0.2}s`;
+        let actionHtml = '';
+        if (task.action === 'meditation') {
+          actionHtml = `
+            <button onclick="startMeditation(${i})" class="ml-[1vw] py-[0.5vh] px-[1vw] bg-blue-500 text-white rounded hover:bg-blue-600">Start</button>
+            <div id="meditationTimer${i}" class="hidden ml-[1vw]">
+              <span id="meditationDisplay${i}" class="text-[0.9rem]"></span>
+              <button onclick="stopMeditation(${i})" class="ml-[1vw] py-[0.5vh] px-[1vw] bg-red-500 text-white rounded hover:bg-red-600">Stop</button>
+            </div>`;
+        } else if (task.action === 'pomodoro') {
+          actionHtml = `
+            <button onclick="startPomodoro(${i})" class="ml-[1vw] py-[0.5vh] px-[1vw] bg-blue-500 text-white rounded hover:bg-blue-600">Start</button>
+            <div id="pomodoroTimer${i}" class="hidden ml-[1vw]">
+              <span id="pomodoroDisplay${i}" class="text-[0.9rem]"></span>
+              <button onclick="stopPomodoro(${i})" class="ml-[1vw] py-[0.5vh] px-[1vw] bg-red-500 text-white rounded hover:bg-red-600">Stop</button>
+            </div>`;
+        } else if (task.action === 'notepad') {
+          actionHtml = `
+            <textarea id="notepad${i}" class="ml-[1vw] w-[60vw] p-[1vw] border rounded text-[0.9rem]" placeholder="Jot down your to-dos..."></textarea>
+            <button onclick="saveNotepad(${i})" class="ml-[1vw] py-[0.5vh] px-[1vw] bg-blue-500 text-white rounded hover:bg-blue-600">Save</button>`;
+        } else if (task.action === 'workspace') {
+          actionHtml = `<p class="ml-[1vw] text-[0.9rem] italic">Clear your desk and silence notifications!</p>`;
+        } else if (task.action === 'checklist') {
+          actionHtml = `
+            <div class="ml-[1vw]">
+              <input id="checklistInput${i}" class="p-[0.5vw] border rounded text-[0.9rem]" placeholder="Add task...">
+              <button onclick="addChecklistItem(${i})" class="ml-[0.5vw] py-[0.5vh] px-[1vw] bg-blue-500 text-white rounded hover:bg-blue-600">Add</button>
+              <div id="checklist${i}" class="mt-[1vh]"></div>
+            </div>`;
+        } else if (task.action === 'focusBlock') {
+          actionHtml = `
+            <button onclick="startFocusBlock(${i})" class="ml-[1vw] py-[0.5vh] px-[1vw] bg-blue-500 text-white rounded hover:bg-blue-600">Start</button>
+            <div id="focusBlockTimer${i}" class="hidden ml-[1vw]">
+              <span id="focusBlockDisplay${i}" class="text-[0.9rem]"></span>
+              <button onclick="stopFocusBlock(${i})" class="ml-[1vw] py-[0.5vh] px-[1vw] bg-red-500 text-white rounded hover:bg-red-600">Stop</button>
+            </div>`;
+        } else if (task.action === 'microTask') {
+          actionHtml = `
+            <button onclick="startMicroTask(${i})" class="ml-[1vw] py-[0.5vh] px-[1vw] bg-blue-500 text-white rounded hover:bg-blue-600">Start</button>
+            <div id="microTaskTimer${i}" class="hidden ml-[1vw]">
+              <span id="microTaskDisplay${i}" class="text-[0.9rem]"></span>
+              <button onclick="completeMicroTask(${i})" class="ml-[1vw] py-[0.5vh] px-[1vw] bg-green-500 text-white rounded hover:bg-green-600">Done</button>
+              <button onclick="stopMicroTask(${i})" class="ml-[1vw] py-[0.5vh] px-[1vw] bg-red-500 text-white rounded hover:bg-red-600">Stop</button>
+            </div>`;
+        } else if (task.action === 'workStretch') {
+          actionHtml = `
+            <button onclick="startWorkStretch(${i})" class="ml-[1vw] py-[0.5vh] px-[1vw] bg-blue-500 text-white rounded hover:bg-blue-600">Start</button>
+            <div id="workStretchTimer${i}" class="hidden ml-[1vw]">
+              <span id="workStretchDisplay${i}" class="text-[0.9rem]"></span>
+              <button onclick="stopWorkStretch(${i})" class="ml-[1vw] py-[0.5vh] px-[1vw] bg-red-500 text-white rounded hover:bg-red-600">Stop</button>
+            </div>`;
+        } else if (task.action === 'accountability') {
+          actionHtml = `<input id="accountability${i}" class="ml-[1vw] p-[0.5vw] border rounded text-[0.9rem]" placeholder="Enter buddy's contact info...">`;
+        }
         div.innerHTML = `
           <svg class="task-icon w-[5vw] h-[5vw] min-w-[20px] min-h-[20px] max-w-[30px] max-h-[30px] text-${severity === 'mild' ? 'green' : severity === 'moderate' ? 'yellow' : 'red'}-500" viewBox="0 0 24 24">
             <circle cx="12" cy="12" r="10" fill="currentColor"/>
             <path d="M10 15l-3-3 1.5-1.5L10 12l5-5 1.5 1.5z" fill="white"/>
           </svg>
-          <p class="text-gray-700 text-[0.9rem] sm:text-[1rem]">${txt}</p>`;
+          <p class="text-gray-700 text-[0.9rem] sm:text-[1rem]">${task.text}</p>
+          ${actionHtml}`;
         tasksEl.appendChild(div);
       });
       document.getElementById('result-screen').classList.remove('hidden');
@@ -180,10 +272,175 @@
 
     function resetQuiz() {
       current = total = 0;
+      stopAllTimers();
+      document.getElementById('loader').classList.add('loader-hidden');
       document.getElementById('result-screen').classList.add('hidden');
       document.getElementById('quiz').classList.remove('hidden');
       document.getElementById('quiz').classList.add('fade-in');
       loadQuestion();
+    }
+
+    function stopAllTimers() {
+      clearInterval(timerInterval);
+      document.getElementById('meditationMusic').pause();
+      document.getElementById('meditationMusic').currentTime = 0;
+      document.querySelectorAll('[id^="meditationTimer"],[id^="pomodoroTimer"],[id^="focusBlockTimer"],[id^="microTaskTimer"],[id^="workStretchTimer"]').forEach(el => el.classList.add('hidden'));
+    }
+
+    // Meditation
+    function startMeditation(index) {
+      const timerDiv = document.getElementById(`meditationTimer${index}`);
+      const display = document.getElementById(`meditationDisplay${index}`);
+      timerDiv.classList.remove('hidden');
+      document.getElementById('startSound').play();
+      document.getElementById('meditationMusic').play();
+      startTimer(300, display, () => {
+        document.getElementById('meditationMusic').pause();
+        document.getElementById('meditationMusic').currentTime = 0;
+        document.getElementById('endSound').play();
+        timerDiv.classList.add('hidden');
+      });
+    }
+
+    function stopMeditation(index) {
+      clearInterval(timerInterval);
+      document.getElementById('meditationMusic').pause();
+      document.getElementById('meditationMusic').currentTime = 0;
+      document.getElementById(`meditationTimer${index}`).classList.add('hidden');
+    }
+
+    // Pomodoro
+    function startPomodoro(index) {
+      const timerDiv = document.getElementById(`pomodoroTimer${index}`);
+      const display = document.getElementById(`pomodoroDisplay${index}`);
+      timerDiv.classList.remove('hidden');
+      pomodoroPhase = 'focus';
+      pomodoroCycles = 0;
+      runPomodoro(index, display, timerDiv);
+    }
+
+    function runPomodoro(index, display, timerDiv) {
+      const duration = pomodoroPhase === 'focus' ? 1500 : 300;
+      document.getElementById('startSound').play();
+      startTimer(duration, display, () => {
+        document.getElementById('endSound').play();
+        if (pomodoroPhase === 'focus') {
+          pomodoroPhase = 'break';
+          runPomodoro(index, display, timerDiv);
+        } else {
+          pomodoroCycles++;
+          if (pomodoroCycles < 4) {
+            pomodoroPhase = 'focus';
+            runPomodoro(index, display, timerDiv);
+          } else {
+            timerDiv.classList.add('hidden');
+          }
+        }
+      }, () => {
+        display.textContent = `${pomodoroPhase === 'focus' ? 'Focus' : 'Break'}: ${display.textContent}`;
+      });
+    }
+
+    function stopPomodoro(index) {
+      clearInterval(timerInterval);
+      document.getElementById(`pomodoroTimer${index}`).classList.add('hidden');
+    }
+
+    // Notepad
+    function saveNotepad(index) {
+      const textarea = document.getElementById(`notepad${index}`);
+      if (textarea.value.trim()) {
+        document.getElementById('rewardSound').play();
+        alert('To-dos saved!');
+      }
+    }
+
+    // Checklist
+    function addChecklistItem(index) {
+      const input = document.getElementById(`checklistInput${index}`);
+      const checklist = document.getElementById(`checklist${index}`);
+      if (input.value.trim()) {
+        const div = document.createElement('div');
+        div.className = 'flex items-center space-x-[1vw] mt-[0.5vh]';
+        div.innerHTML = `
+          <input type="checkbox" onchange="if(this.checked) document.getElementById('rewardSound').play();" class="w-[4vw] h-[4vw] min-w-[16px] min-h-[16px]">
+          <span class="text-[0.9rem]">${input.value}</span>`;
+        checklist.appendChild(div);
+        input.value = '';
+      }
+    }
+
+    // Focus Block
+    function startFocusBlock(index) {
+      const timerDiv = document.getElementById(`focusBlockTimer${index}`);
+      const display = document.getElementById(`focusBlockDisplay${index}`);
+      timerDiv.classList.remove('hidden');
+      document.getElementById('startSound').play();
+      startTimer(2700, display, () => {
+        document.getElementById('endSound').play();
+        timerDiv.classList.add('hidden');
+      });
+    }
+
+    function stopFocusBlock(index) {
+      clearInterval(timerInterval);
+      document.getElementById(`focusBlockTimer${index}`).classList.add('hidden');
+    }
+
+    // Micro-Task
+    function startMicroTask(index) {
+      const timerDiv = document.getElementById(`microTaskTimer${index}`);
+      const display = document.getElementById(`microTaskDisplay${index}`);
+      timerDiv.classList.remove('hidden');
+      document.getElementById('startSound').play();
+      startTimer(300, display, () => {
+        document.getElementById('endSound').play();
+        timerDiv.classList.add('hidden');
+      });
+    }
+
+    function completeMicroTask(index) {
+      if (timerInterval) {
+        clearInterval(timerInterval);
+        document.getElementById('rewardSound').play();
+        document.getElementById(`microTaskTimer${index}`).classList.add('hidden');
+      }
+    }
+
+    function stopMicroTask(index) {
+      clearInterval(timerInterval);
+      document.getElementById(`microTaskTimer${index}`).classList.add('hidden');
+    }
+
+    // Work-Stretch
+    function startWorkStretch(index) {
+      const timerDiv = document.getElementById(`workStretchTimer${index}`);
+      const display = document.getElementById(`workStretchDisplay${index}`);
+      timerDiv.classList.remove('hidden');
+      pomodoroPhase = 'work';
+      runWorkStretch(index, display, timerDiv);
+    }
+
+    function runWorkStretch(index, display, timerDiv) {
+      const duration = pomodoroPhase === 'work' ? 900 : 300;
+      document.getElementById('startSound').play();
+      startTimer(duration, display, () => {
+        document.getElementById('endSound').play();
+        if (pomodoroPhase === 'work') {
+          pomodoroPhase = 'stretch';
+          runWorkStretch(index, display, timerDiv);
+        } else {
+          pomodoroPhase = 'work';
+          runWorkStretch(index, display, timerDiv);
+        }
+      }, () => {
+        display.textContent = `${pomodoroPhase === 'work' ? 'Work' : 'Stretch'}: ${display.textContent}`;
+      });
+    }
+
+    function stopWorkStretch(index) {
+      clearInterval(timerInterval);
+      document.getElementById(`workStretchTimer${index}`).classList.add('hidden');
     }
   </script>
 </body>
